# cordial-f1r3node

./: CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Justfile  README.md  package-lock.json  package.json  rustfmt.toml  rustfmt.toml.  verify_approval.py  visualizer.html
.cargo/: config.toml
.github/workflows/: rust.yml
.husky/: pre-push
cordial-f1r3node-adapter/tests/: test_shard_conf.rs
crates/blocklace/: Cargo.toml
crates/blocklace-f1r3node/: Cargo.toml
crates/blocklace-f1r3node/src/: block_translation.rs  casper_adapter.rs  crypto_bridge.rs  shard_conf.rs  snapshot.rs
crates/blocklace-f1r3node/tests/: test_crypto_bridge.rs
crates/blocklace-f1r3rspace/: Cargo.toml
crates/blocklace-f1r3rspace/src/: lib.rs
crates/blocklace-f1r3rspace/tests/: test_translation.rs
crates/blocklace/src/: block.rs  blocklace.rs  crypto.rs
crates/blocklace/src/consensus/: finality.rs  mod.rs
crates/blocklace/src/execution/: deploy_pool.rs
crates/blocklace/src/network/: message.rs
crates/blocklace/src/types/: mod.rs  node_id.rs
crates/blocklace/tests/: mod.rs  test_blocklace.rs  test_consensus_simulation.rs  test_message_propagation.rs  test_node.rs  test_payload.rs  test_runtime.rs  test_sign.rs
crates/cordial-f1r3node-adapter/: Cargo.toml
crates/cordial-f1r3node-adapter/src/: block_translation.rs  casper_adapter.rs  crypto_bridge.rs  crypto_impl.rs  grpc_ingest.rs  lib.rs  proposer.rs  repository.rs  rspace_runtime.rs  runtime_bridge.rs  shard_conf.rs  slashing.rs  snapshot.rs
crates/cordial-f1r3node-adapter/tests/: conformance.rs  test_block_translation.rs  test_casper_adapter.rs  test_crypto_adapter.rs  test_crypto_bridge.rs  test_grpc_ingest.rs  test_proposer.rs  test_repository.rs  test_shard_conf.rs  test_slashing.rs  test_snapshot.rs
crates/cordial-f1r3space-adapter/: Cargo.toml
crates/cordial-f1r3space-adapter/src/: error.rs  lib.rs  lmdb_store.rs  repository.rs
crates/cordial-f1r3space-adapter/src/lmdb_store/: mod.rs  open.rs  recovery.rs  repository_impl.rs
crates/cordial-f1r3space-adapter/tests/: test_translation.rs
crates/cordial-miners-core/: Cargo.toml
crates/cordial-miners-core/src/: block.rs  blocklace.rs  cordiality.rs  crypto.rs  finality.rs  lib.rs
crates/cordial-miners-core/src/consensus/: approval.rs  cordiality.rs  dissemination.rs  evidence.rs  finality.rs  fork_choice.rs  mod.rs  ordering.rs  pruning.rs  round.rs  validation.rs  wave.rs
crates/cordial-miners-core/src/execution/: deploy_pool.rs  mod.rs  payload.rs  runtime.rs
crates/cordial-miners-core/src/finality/: tests.rs
crates/cordial-miners-core/src/network/: NETWORK.md  message.rs  mod.rs  node.rs  peer.rs
crates/cordial-miners-core/src/simulation/: dissemination.rs  mod.rs
crates/cordial-miners-core/src/types/: content_id.rs  identity_id.rs  mod.rs  node_id.rs
crates/cordial-miners-core/tests/: mod.rs  test_approval.rs  test_block.rs  test_blocklace.rs  test_checkpoint_pruning.rs  test_consensus_simulation.rs  test_cordiality.rs  test_cordiality_traits.rs  test_deploy_pool.rs  test_depth.rs  test_dissemination.rs  test_dissemination_simulation.rs  test_evidence_pool.rs  test_file.rs  test_finality.rs  test_fork_choice.rs  test_hash.rs  test_hash_with_blake.rs  test_message.rs  test_message_propagation.rs  test_node.rs  test_ordering.rs  test_payload.rs  test_peer.rs  test_ratification.rs  test_runtime.rs  test_sign.rs  test_sign_with_secp256k1.rs  test_tau.rs  test_validation.rs  test_wave.rs  test_weighted_ratification.rs
docs/: CONSENSUS_GAP_ANALYSIS.md  INTEGRATION_NEXT_STEPS.md  cordial-miners-progress-report.md  cordial-miners-vs-cbc-casper.md  cordiality-implementation.md  implementation.md
docs/cordial-miners/: 06-evidence-pool.md  07-slash-formatting.md  08-approval-mechanics.md  09-ratification-math.md  10-leader-finality.md  11-tau-ordering.md  12-checkpoint-pruning.md  13-grpc-ingestion.md  14-crypto-adapter.md  15-proposer-pipeline.md  15-weighted-ratification-plan.md  16-slashing-integration.md  18-conformance-testing.md
scripts/: check_core_boundaries.sh  pre-push-ci.sh
src/: block.rs  blocklace.rs  crypto.rs  lib.rs
src/consensus/: fork_choice.rs  mod.rs
src/execution/: mod.rs  payload.rs  runtime.rs
src/network/: message.rs  mod.rs  node.rs  peer.rs
src/types/: content_id.rs  identity_id.rs  mod.rs
tests/: test_block.rs  test_blocklace.rs  test_deploy_pool.rs  test_hash.rs  test_message.rs  test_peer.rs  test_validation.rs
