[package]
name = "blocklace"
description = "Cordial Miners consensus on a blocklace DAG"
version.workspace = true
edition.workspace = true

[dependencies]
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
