[package]
name = "cordial-f1r3node-adapter"
description = "f1r3node integration adapter for the blocklace crate: Casper trait, block translation, and real RSpace runtime binding"
version.workspace = true
edition.workspace = true

[dependencies]
cordial-miners-core = { path = "../cordial-miners-core" }

# Shared deps we use internally for translation, hashing, etc.
sha2.workspace = true
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true

# Phase 3.4 — crypto alignment with f1r3node.
blake2.workspace = true
k256.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true

# Phase 3.1 — Casper trait adapter
async-trait.workspace = true
either.workspace = true
tokio.workspace = true
clap = { version = "4.6", features = ["derive"] }

casper = { path = "../../../f1r3node/casper" }
models = { path = "../../../f1r3node/models" }
